<resources>
    <string name="app_name">NetPlay</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="title_home">Home</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="release_date">0000</string>
    <string name="runtime">000 min</string>
    <string name="revenue">0M</string>
    <string name="ratinf">10</string>
    <string name="vote_count">0 vote</string>
    <string name="genre">Genre</string>
    <string name="ratenum">ratenum</string>
    <string name="ended">Ended</string>
    <string name="search">Search</string>
    <string name="category_tvshow">TV SHOW</string>
    <string name="category_movie">MOVIE</string>
    <string name="category_bookmark">BOOKMARK</string>
    <string name="category_home">HOME</string>
    <string name="popular_movie">Now Playing Movie</string>
    <string name="developer_name">Developed By Yogi Dwi Andrian</string>
    <string name="ayat_kutipan">Q.S Al-Baqarah: 286</string>
    <string name="kutipan">\"Allah tidak membebani seseorang melainkan sesuai dengan kesanggupannya.\"</string>
    <string name="popular_tv_show">Popular Tv Show</string>
    <string name="hastag">#hastag</string>
    <string name="tv_lb_type">Type :</string>
    <string name="tv_lb_genre">Genre :</string>
    <string name="tv_lb_budget">Budget :</string>
    <string name="tv_lb_countries">Countries :</string>
    <string name="label_description">Description</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_episodes">episodes</string>
    <string name="label_season">s</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="cd_slider">image slider</string>
    <string name="cd_splashscreen">gambar splash screen</string>
    <string name="cd_bg_hastag">background hastag</string>
    <string name="cd_gambar_poster">gambar poster</string>
    <string name="cd_sypnosis">icon expand/collapse</string>
    <string name="cd_star">icon star</string>
    <string name="cd_bg_detail">bacground detail activity</string>
    <string name="cd_backdrop_detail">backdrop image</string>
    <string name="cd_dot">gambar titik</string>
    <string name="cd_revenue">icon revenue</string>
    <string name="cd_bookmark">icon bookmark</string>
    <string name="empty_bmMovie">Bookmark some movie to populate this list</string>
    <string name="empty_bmTvShow">Bookmark some tv show to populate this list</string>
</resources>