<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kajangdevs.netplay.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.kajangdevs.netplay.ui.movie.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.kajangdevs.netplay.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshow" />
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.kajangdevs.netplay.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
</navigation>