<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/gray"
        android:contentDescription="@string/cd_gambar_poster"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/item_container"
        app:layout_constraintStart_toStartOf="@+id/item_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/fira_sans"
                android:paddingEnd="170dp"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="#fff"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <RatingBar
                android:id="@+id/ratebar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:max="10"
                android:numStars="5"
                android:rating="2"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="@+id/tv_tittle"
                app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />

            <TextView
                android:id="@+id/ratenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/fira_sans"
                android:text="@string/ratenum"
                android:textColor="#F5B402"
                app:layout_constraintBottom_toBottomOf="@+id/ratebar"
                app:layout_constraintStart_toEndOf="@+id/ratebar"
                app:layout_constraintTop_toTopOf="@+id/ratebar" />

            <TextView
                android:id="@+id/tv_release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textColor="@color/colorFont"
                app:layout_constraintStart_toStartOf="@+id/ratebar"
                app:layout_constraintTop_toBottomOf="@+id/ratenum" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:maxLines="2"
                android:paddingEnd="170dp"
                android:text="@string/genre"
                android:textColor="@color/colorFont"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_release_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_year"
                tools:ignore="RtlSymmetry" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>